[package]
name = "mdbook-katex"
version = "0.9.4"
authors = [
    "Lucas Zanini <zanini.lcs@gmail.com>",
    "Steven Hé (Sīchàng) <stevensichanghe@gmail.com>",
]
edition = "2021"
description = "mdBook preprocessor rendering LaTeX equations to HTML."
license = "MIT"
readme = "README.md"
repository = "https://github.com/lzanini/mdbook-katex"

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
mdbook = { package = "mdbook_fork4ls", version = "0.4.48", default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.8"
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
] }
rayon = "1.10"

# Remember to modify the tests accordingly if you modify this.
[target.'cfg(any(target_os = "macos", all(unix, target_arch = "x86_64"), all(windows, target_env = "gnu")))'.dependencies]
katex = { version = "0.4.6", optional = true }

[target.'cfg(not(any(target_os = "macos", all(unix, target_arch = "x86_64"), all(windows, target_env = "gnu"))))'.dependencies]
katex = { version = "0.4.6", default-features = false, features = [
    "duktape",
], optional = true }

[features]
default = ["pre-render"]
pre-render = ["katex"]

[profile.release]
opt-level = "z"
lto = true
