[package]
name = "mdbook-katex"
version = "0.10.0"
authors = [
    "Lucas Zanini <zanini.lcs@gmail.com>",
    "Steven Hé (Sīchàng) <stevensichanghe@gmail.com>",
]
edition = "2021"
description = "mdBook preprocessor rendering LaTeX equations to HTML."
license = "MIT"
readme = "README.md"
repository = "https://github.com/lzanini/mdbook-katex"

[dependencies]
clap = { version = "4.5.53", features = ["cargo"] }
mdbook-preprocessor = {version = "0.5.1"}
serde = "1.0.228"
serde_derive = "1.0"
serde_json = "1.0.145"
toml = "0.9.8"
tracing = { version = "0.1.41", default-features = false, features = [
    "attributes",
] }
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
] }
rayon = "1.11"
katex = { version = "0.4.6", default-features = false, optional = true }

[features]
default = ["quick-js"]
pre-render = ["dep:katex"]
quick-js = ["pre-render", "katex/quick-js"]
duktape = ["pre-render", "katex/duktape"]

[profile.release]
opt-level = "z"
lto = true
